[gd_scene load_steps=6 format=1]

[ext_resource path="res://theme_24.tres" type="Theme" id=1]
[ext_resource path="res://theme_14.tres" type="Theme" id=2]
[ext_resource path="res://toggle_autorefresh.gd" type="Script" id=3]
[ext_resource path="res://final_title.gd" type="Script" id=4]
[ext_resource path="res://final_desc.gd" type="Script" id=5]

[node name="Control" type="Node"]

[node name="Container" type="Container" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="vbox_title" type="VBoxContainer" parent="Container"]

editor/display_folded = true
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 211.0
margin/bottom = 39.0
custom_constants/separation = 10
alignment = 0

[node name="hbox_title" type="HBoxContainer" parent="Container/vbox_title"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 191.0
margin/bottom = 31.0
alignment = 0

[node name="label_title" type="Label" parent="Container/vbox_title/hbox_title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 2.0
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 67.0
margin/bottom = 31.0
text = "TITLE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_(" type="LineEdit" parent="Container/vbox_title/hbox_title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 71.0
margin/top = 1.0
margin/right = 129.0
margin/bottom = 30.0
placeholder/text = "LEFT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_)" type="LineEdit" parent="Container/vbox_title/hbox_title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 133.0
margin/top = 1.0
margin/right = 191.0
margin/bottom = 30.0
placeholder/text = "RIGHT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox" type="HBoxContainer" parent="Container/vbox_title"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 191.0
margin/bottom = 69.0
alignment = 0

[node name="checkbox_PV" type="CheckBox" parent="Container/vbox_title/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 93.0
margin/bottom = 28.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "PV"
flat = false
align = 0

[node name="checkbox_UTAU" type="CheckBox" parent="Container/vbox_title/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 97.0
margin/top = 0.0
margin/right = 191.0
margin/bottom = 28.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "UTAU"
flat = false
align = 0

[node name="field_name" type="LineEdit" parent="Container/vbox_title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 79.0
margin/right = 191.0
margin/bottom = 108.0
placeholder/text = "NAME"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox2" type="HBoxContainer" parent="Container/vbox_title"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 118.0
margin/right = 191.0
margin/bottom = 147.0
alignment = 0

[node name="field_pre" type="LineEdit" parent="Container/vbox_title/hbox2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 58.0
margin/bottom = 29.0
text = "ft."
placeholder/text = "PREPEND"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_feat" type="LineEdit" parent="Container/vbox_title/hbox2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 4.0
theme/theme = ExtResource( 2 )
margin/left = 62.0
margin/top = 0.0
margin/right = 191.0
margin/bottom = 29.0
placeholder/text = "FEAT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_extra_1" type="LineEdit" parent="Container/vbox_title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 157.0
margin/right = 191.0
margin/bottom = 186.0
placeholder/text = "EXTRA_TAG"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_extra_2" type="LineEdit" parent="Container/vbox_title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 196.0
margin/right = 191.0
margin/bottom = 225.0
placeholder/text = "EXTRA_TAG"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="vbox_desc" type="VBoxContainer" parent="Container"]

editor/display_folded = true
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 20.0
margin/top = 270.0
margin/right = 271.0
margin/bottom = 20.0
custom_constants/separation = 10
alignment = 0

[node name="label_desc" type="Label" parent="Container/vbox_desc"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 251.0
margin/bottom = 31.0
text = "UPLD_COMM"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="edit_desc" type="TextEdit" parent="Container/vbox_desc"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 41.0
margin/right = 251.0
margin/bottom = 310.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="vbox_credits" type="VBoxContainer" parent="Container"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 230.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 29.0
custom_constants/separation = 10
alignment = 0

[node name="hbox" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 31.0
alignment = 0

[node name="label_credits" type="Label" parent="Container/vbox_credits/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 10.0
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 316.0
margin/bottom = 31.0
text = "CREDITS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_(" type="LineEdit" parent="Container/vbox_credits/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 2.0
theme/theme = ExtResource( 2 )
margin/left = 320.0
margin/top = 1.0
margin/right = 383.0
margin/bottom = 30.0
placeholder/text = "LEFT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_)" type="LineEdit" parent="Container/vbox_credits/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 2.0
theme/theme = ExtResource( 2 )
margin/left = 387.0
margin/top = 1.0
margin/right = 450.0
margin/bottom = 30.0
placeholder/text = "RIGHT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_separator" type="LineEdit" parent="Container/vbox_credits/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 454.0
margin/top = 1.0
margin/right = 550.0
margin/bottom = 30.0
placeholder/text = "SEP"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox_credit0" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 550.0
margin/bottom = 70.0
alignment = 0

[node name="field_prepend" type="LineEdit" parent="Container/vbox_credits/hbox_credit0"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 29.0
text = "本家"
placeholder/text = "PREPEND"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_link" type="LineEdit" parent="Container/vbox_credits/hbox_credit0"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 7.0
theme/theme = ExtResource( 2 )
margin/left = 105.0
margin/top = 0.0
margin/right = 342.0
margin/bottom = 29.0
placeholder/text = "LINK"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_origpvused" type="LineEdit" parent="Container/vbox_credits/hbox_credit0"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 6.0
theme/theme = ExtResource( 2 )
margin/left = 346.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 29.0
placeholder/text = "EXTRA_LINE"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox_credit1" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 550.0
margin/bottom = 109.0
alignment = 0

[node name="field_prepend" type="LineEdit" parent="Container/vbox_credits/hbox_credit1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 29.0
text = "音樂"
placeholder/text = "Prepend"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_credit" type="LineEdit" parent="Container/vbox_credits/hbox_credit1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 4.0
theme/theme = ExtResource( 2 )
margin/left = 105.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 29.0
placeholder/text = "CREDIT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_link" type="LineEdit" parent="Container/vbox_credits/hbox_credit1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 9.0
theme/theme = ExtResource( 2 )
margin/left = 244.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 29.0
placeholder/text = "LINK"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox_credit2" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 119.0
margin/right = 550.0
margin/bottom = 148.0
alignment = 0

[node name="field_prepend" type="LineEdit" parent="Container/vbox_credits/hbox_credit2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 29.0
text = "影片"
placeholder/text = "Prepend"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_credit" type="LineEdit" parent="Container/vbox_credits/hbox_credit2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 4.0
theme/theme = ExtResource( 2 )
margin/left = 105.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 29.0
placeholder/text = "CREDIT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_link" type="LineEdit" parent="Container/vbox_credits/hbox_credit2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 9.0
theme/theme = ExtResource( 2 )
margin/left = 244.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 29.0
placeholder/text = "LINK"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox_credit3" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 158.0
margin/right = 550.0
margin/bottom = 187.0
alignment = 0

[node name="field_prepend" type="LineEdit" parent="Container/vbox_credits/hbox_credit3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 29.0
text = "唄"
placeholder/text = "Prepend"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_credit" type="LineEdit" parent="Container/vbox_credits/hbox_credit3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 4.0
theme/theme = ExtResource( 2 )
margin/left = 105.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 29.0
placeholder/text = "CREDIT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_link" type="LineEdit" parent="Container/vbox_credits/hbox_credit3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 9.0
theme/theme = ExtResource( 2 )
margin/left = 244.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 29.0
placeholder/text = "LINK"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox_credit4" type="HBoxContainer" parent="Container/vbox_credits"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 197.0
margin/right = 550.0
margin/bottom = 226.0
alignment = 0

[node name="field_prepend" type="LineEdit" parent="Container/vbox_credits/hbox_credit4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 29.0
text = "UST"
placeholder/text = "Prepend"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_credit" type="LineEdit" parent="Container/vbox_credits/hbox_credit4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 4.0
theme/theme = ExtResource( 2 )
margin/left = 105.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 29.0
placeholder/text = "CREDIT"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="field_link" type="LineEdit" parent="Container/vbox_credits/hbox_credit4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 9.0
theme/theme = ExtResource( 2 )
margin/left = 244.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 29.0
placeholder/text = "LINK"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="vbox_final" type="VBoxContainer" parent="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 290.0
margin/top = 280.0
margin/right = 19.0
margin/bottom = 20.0
custom_constants/separation = 7
alignment = 0

[node name="hbox" type="HBoxContainer" parent="Container/vbox_final"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 491.0
margin/bottom = 31.0
custom_constants/separation = 10
alignment = 0

[node name="label_result" type="Label" parent="Container/vbox_final/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 31.0
text = "RESULT"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="toggle_autorefresh" type="CheckButton" parent="Container/vbox_final/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 90.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 31.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "AUTO_REF"
flat = false
align = 0
script/script = ExtResource( 3 )

[node name="button_refresh" type="Button" parent="Container/vbox_final/hbox"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 251.0
margin/top = 4.0
margin/right = 314.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "REF"
flat = false

[node name="label_finaltitle_pre" type="Label" parent="Container/vbox_final"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 38.0
margin/right = 491.0
margin/bottom = 57.0
text = "TITLE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_finaltitle" type="LineEdit" parent="Container/vbox_final"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 64.0
margin/right = 491.0
margin/bottom = 93.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65
script/script = ExtResource( 4 )

[node name="label_finaldesc_pre" type="Label" parent="Container/vbox_final"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 100.0
margin/right = 491.0
margin/bottom = 119.0
text = "DESCRIP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="edit_finaldesc" type="TextEdit" parent="Container/vbox_final"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 126.0
margin/right = 491.0
margin/bottom = 300.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
script/script = ExtResource( 5 )

[connection signal="toggled" from="Container/vbox_title/hbox/checkbox_PV" to="Container/vbox_final/field_finaltitle" method="_on_checkbox_PV_toggled"]

[connection signal="toggled" from="Container/vbox_title/hbox/checkbox_UTAU" to="Container/vbox_final/field_finaltitle" method="_on_checkbox_UTAU_toggled"]

[connection signal="toggled" from="Container/vbox_final/hbox/toggle_autorefresh" to="Container/vbox_final/field_finaltitle" method="_on_toggle_autorefresh_toggled"]

[connection signal="toggled" from="Container/vbox_final/hbox/toggle_autorefresh" to="Container/vbox_final/edit_finaldesc" method="_on_toggle_autorefresh_toggled"]

[connection signal="pressed" from="Container/vbox_final/hbox/button_refresh" to="Container/vbox_final/field_finaltitle" method="_on_button_refresh_pressed"]

[connection signal="pressed" from="Container/vbox_final/hbox/button_refresh" to="Container/vbox_final/edit_finaldesc" method="_on_button_refresh_pressed"]


